@@ -34,6 +34,7 @@ Bugs fixed
 * #9481: cpp domain: some warnings contain non-existing filenames
 * #9456: html search: abbreation marks are inserted to the search result if
   failed to fetch the content of the page
+* #9267: html theme: CSS and JS files added by theme were loaded twice
 
 Testing
 --------
